# opr_python

./: README.md  pyproject.toml  requirements.txt
opr_python/: __init__.py  cresis_season.py  find_cresisfiles.py  radar_load.py  read_h5.py  requirements.txt  struct_to_dict.py
opr_python/.ipynb_checkpoints/: __init__-checkpoint.py  depth_shift-checkpoint.py  elevation_shift-checkpoint.py  loadmat-checkpoint.py
