[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opr_python"
version = "0.1.0"
description = "Utilities for reading and restructuring CReSIS radar data in Python (two-way travel time → depth/elevation)."
readme = "README.md"
requires-python = ">=3.0"
authors = [{ name = "Nick Holschuh", email = "nholschuh@amherst.edu" }]
maintainers = [{ name = "Nick Holschuh", email = "nholschuh@amherst.edu" }]
keywords = ["CReSIS", "radar", "glaciology", "geophysics", "cryosphere", "remote sensing", "depth conversion"]
license = { file = "LICENSE" }

dependencies = [
  "h5py",
  "hdf5storage",
  "mat73",
  "matplotlib",
  "numpy",
  "pyproj",
  "scipy"
]

[project.urls]
Homepage = "https://example.com/opr_python"
Source = "https://example.com/opr_python"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["opr_python*"]

[tool.setuptools.package-data]
"opr_python" = ["*.mat"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]
